# pyvalem

./: .gitignore  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi-deploy.yml  python-pkg-cd.yml  (+2 more)
doc/: conf.py  formula.rst  introduction.rst  reaction.rst  stateful_species.rst  states.rst
pyvalem/: atom_data.py  atomic_configuration.py  atomic_term_symbol.py  diatomic_molecular_configuration.py  formula.py  generic_excited_state.py  isotope_masses.txt  key_value_pair.py  molecular_term_symbol.py  racah_symbol.py  reaction.py  rotational_state.py  special_cases.py  state_parser.py  stateful_species.py  utils.py  vibrational_state.py
test/: good_formulas.py  test_aliases.py  test_atomic_configurations.py  test_atomic_term_symbols.py  test_atoms_isotopes.py  test_diatomic_molecular_configurations.py  test_formula.py  test_generic_excited_state.py  test_key_value_pairs.py  test_molecular_term_symbol.py  test_racah_symbols.py  test_reaction.py  test_rotational_state.py  test_stateful_species.py  test_vibrational_state.py
tests/: good_formulas.py  test_J1J2_coupling.py  test_J1K_LK_coupling.py  test_aliases.py  test_atomic_configurations.py  test_atomic_term_symbols.py  test_atoms_isotopes.py  test_compound_LS_coupling.py  test_diatomic_molecular_configurations.py  test_formula.py  test_generic_excited_state.py  test_imports.py  test_key_value_pairs.py  test_molecular_term_symbol.py  test_racah_symbols.py  test_reaction.py  test_rotational_state.py  test_stateful_species.py  test_vibrational_state.py
(+73 files in other folders)
