[build-system]
requires = ["setuptools>=43", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='**/*.rst'"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{10,9,8,7}-pp_{l,h}, py3{6}-pp_{l,h}-ir_{l,h}
skip_missing_interpreters = true

[testenv]
deps =
    pytest
    pp_l: pyparsing==2.3.0
    pp_h: pyparsing
    ir_l: importlib-resources==1.0
    ir_h: importlib-resources
commands = pytest
"""

[tool.coverage.run]
omit = ["tests/*", "src/pyvalem/__init__.py", "docs/*"]

[tool.coverage.html]
directory = "htmlcov"